backend/kube/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivum-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivum-backend
  template:
    metadata:
      labels:
        app: archivum-backend
    spec:
      containers:
        - name: archivum-backend
          image: homelab.local:30005/archivum-backend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
