backend/kube/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: archivum-backend
spec:
  selector:
    app: archivum-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30020
